* Bug #35838: suppress scrollbars in search widget on Chromium 37
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-4@56650 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -1276,3 +1276,7 @@ p {
 .dijitTextBox.dijitFocused .umcInlineLabel {
 	color: @gray;
 }
+
+.umc .umcMixedInput.dijitContentPane {
+	overflow: hidden;
+}
